Разделение изображение на папки согласно их классам

--- a/cats_extraction.ipynb
+++ b/cats_extraction.ipynb
@@ -2,11 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_to_cats = \"data/oxford/cat_images\""
+    "path_to_cats = \"data/oxford/cat_images\"\n",
+    "path_to_train_folder = \"data/oxford/train\"\n",
+    "path_to_valid_folder = \"data/oxford/valid\"\n",
+    "path_to_test_folder = \"data/oxford/test\"\n",
+    "breeds = [\"Abyssinian\", \"Bengal\", \"Birman\", \"Bombay\", \"British Shorthair\", \"Egyptian Mau\", \"Maine Coon\", \"Persian\", \"Ragdoll\", \"Russian Blue\", \"Siamese\", \"Sphynx\"]"
    ]
   },
   {
@@ -19,7 +23,6 @@
     "import os\n",
     "import shutil\n",
     "\n",
-    "breeds = [\"Abyssinian\", \"Bengal\", \"Birman\", \"Bombay\", \"British Shorthair\", \"Egyptian Mau\", \"Maine Coon\", \"Persian\", \"Ragdoll\", \"Russian Blue\", \"Siamese\", \"Sphynx\"]\n",
     "path_to_images = \"data/oxford/images\"\n",
     "path_to_new_folder = path_to_cats\n",
     "if not os.path.exists(path_to_new_folder):\n",
@@ -43,9 +46,6 @@
     "import shutil\n",
     "\n",
     "path_to_images = path_to_cats\n",
-    "path_to_train_folder = \"data/oxford/train\"\n",
-    "path_to_valid_folder = \"data/oxford/valid\"\n",
-    "path_to_test_folder = \"data/oxford/test\"\n",
     "\n",
     "# Create the train, valid, and test folders if they don't exist\n",
     "for folder in [path_to_train_folder, path_to_valid_folder, path_to_test_folder]:\n",
@@ -72,6 +72,37 @@
     "        shutil.move(os.path.join(path_to_images, image_file), path_to_valid_folder)\n",
     "    else:\n",
     "        shutil.move(os.path.join(path_to_images, image_file), path_to_test_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "path_to_images = path_to_cats\n",
+    "\n",
+    "path_to_folders = [path_to_test_folder, path_to_train_folder, path_to_valid_folder]\n",
+    "\n",
+    "for folder in path_to_folders:\n",
+    "\n",
+    "    for breed in breeds:\n",
+    "        path = os.path.join(folder, breed)\n",
+    "        if not os.path.exists(path):\n",
+    "            os.makedirs(path)\n",
+    "    # Get a list of all the image files\n",
+    "    image_files = os.listdir(folder)\n",
+    "\n",
+    "    # Move the images to the train, valid, and test folders\n",
+    "    for image_file in image_files:\n",
+    "        # Get the breed name from the image file name\n",
+    "        breed_name = image_file.split(\"_\")[0]\n",
+    "        if breed_name in breeds:\n",
+    "            # Move the image to the appropriate folder\n",
+    "            shutil.move(os.path.join(folder, image_file), os.path.join(folder, breed_name))"
    ]
   }
  ],
