Замена пробела на '_'

--- a/cats_extraction.ipynb
+++ b/cats_extraction.ipynb
@@ -10,7 +10,7 @@
     "path_to_train_folder = \"data/oxford/train\"\n",
     "path_to_valid_folder = \"data/oxford/valid\"\n",
     "path_to_test_folder = \"data/oxford/test\"\n",
-    "breeds = [\"Abyssinian\", \"Bengal\", \"Birman\", \"Bombay\", \"British Shorthair\", \"Egyptian Mau\", \"Maine Coon\", \"Persian\", \"Ragdoll\", \"Russian Blue\", \"Siamese\", \"Sphynx\"]"
+    "breeds = [\"Abyssinian\", \"Bengal\", \"Birman\", \"Bombay\", \"British_Shorthair\", \"Egyptian_Mau\", \"Maine_Coon\", \"Persian\", \"Ragdoll\", \"Russian_Blue\", \"Siamese\", \"Sphynx\"]"
    ]
   },
   {
