--- a/cats_extraction.ipynb
+++ b/cats_extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,11 +98,9 @@
     "\n",
     "    # Move the images to the train, valid, and test folders\n",
     "    for image_file in image_files:\n",
-    "        # Get the breed name from the image file name\n",
-    "        breed_name = image_file.split(\"_\")[0]\n",
-    "        if breed_name in breeds:\n",
-    "            # Move the image to the appropriate folder\n",
-    "            shutil.move(os.path.join(folder, image_file), os.path.join(folder, breed_name))"
+    "        for breed in breeds: \n",
+    "            if image_file.startswith(breed):\n",
+    "                shutil.move(os.path.join(folder, image_file), os.path.join(folder, breed))"
    ]
   }
  ],
