--- a/cats_extraction.ipynb
+++ b/cats_extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
     "import os\n",
     "import shutil\n",
     "\n",
-    "path_to_images = \"data/oxford/images\"\n",
+    "path_to_images = \"data/oxford/images/images\"\n",
     "path_to_new_folder = path_to_cats\n",
     "if not os.path.exists(path_to_new_folder):\n",
     "    os.makedirs(path_to_new_folder)\n",
@@ -120,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
